# log-anomaly-detector-cdk

./: .gitignore  LICENSE  cdk.json  package-lock.json  package.json  pyproject.toml
lib/: constants.ts  ddb-table.ts  logs-anomaly-detector-cdk-stack.ts
lib/lambdas/: log-ingestor.ts
lib/queues/: main.ts  priority.ts
src/docs/adr/: 001-queue-topology.md
src/lambdas/log_ingestor/: app.py  config.py  enricher.py  errors.py  handler.py  metrics.py  models.py  protocols.py  publisher.py  requirements.txt  response_builder.py  router.py  validator.py
src/load_generator/: __init__.py  config.py  constants.py  generator.py  main.py  models.py  runner.py  scheduler.py  senders.py
test/: ddb-table.test.ts  log-ingestor.test.ts  logs-anomaly-detector-cdk.test.ts  main-queue.test.ts  priority-queue.test.ts  test-utils.ts
tests/log_ingestor/: conftest.py  factories.py  test_enricher_router.py  test_handler.py  test_metrics.py  test_publisher.py  test_response_builder.py  test_validator.py
