[project]
name = "logs-anomaly-detector-cdk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.0.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
    "aws-xray-sdk>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "boto3-stubs[sqs,cloudwatch]>=1.34.0",
    "types-boto3>=1.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["src/lambdas", "tests/log_ingestor"]
testpaths = ["tests/log_ingestor"]
addopts = "--cov=log_ingestor --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["log_ingestor"]
omit = ["log_ingestor/handler.py"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/lambdas/log_ingestor"]
mypy_path = "src/lambdas"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["aws_lambda_powertools.*", "botocore.*", "boto3.*"]
ignore_missing_imports = true
